2006-01-27  Senganal T  <tsenganal@novell.com>

	* DbDataAdapter.cs :
		- Modified schema population to follow MissingSchemaAction and MissingMappingAction
		- Add a column to the Primary Key only if its not a hidden key
		- Added some argument checks
		- Removed some redundant code
	* DataAdapter :
		- Added argument checks
	* ExceptionHelper :
		- Added InvalidEnumException , a helper function to print error msg
		
2006-01-11 Boris Kirzner <borisk@mainsoft.com>
	* Index.cs: removed redundant call to RebuildIndex() in constructor.

2005-12-12  Konstantin Triger <kostat@mainsoft.com>

	* Key.cs: Added ContainsVersion function, refactoring.
	* Index.cs: Fixed Reset() to be ready for Update() calls.
	   Otherwise the index can be rebuilt with new values inside the
	   Update() call itself.
	   Fixed FindIndexExact(), Update(), Delete().

2005-11-22  Konstantin Triger <kostat@mainsoft.com>

	* DbProviderFactory.cs: TARGET_JVM ifdef.

2005-11-21  Senganal T <tsenganal@novell.com>

	* DbDataAdapter.cs
	* DbParameter.cs
	* DbTransaction.cs
	* DbTable.cs
	* DbProviderFactories.cs
	* DbException.cs
	* DbProviderFactory.cs
	* DbCommandBuilder.cs
	* DbDataReader.cs
	* DbParameterCollection.cs
		- Added stubs and other changes for ADO.NET 2.0 compatibility.
	* DbMetaDataCollectionNames.cs (new file)
		- Added DbMetaDataCollectionNames Enumeration 

2005-10-24  Konstantin Triger <kostat@mainsoft.com>

        * DataContainer.cs: removed extra type validation for object container

2005-10-14  Senganal T  <tsenganal@novell.com>

	* DbDataAdapter.cs : 
		- BuildSchema() : Set the value of DataColumn Property 'AllowDBNull'
		as returned by database. Fixes bug#76433. 

2005-09-21 Boris Kirzner <borisk@mainsoft.com>
	* Index.cs: 
		- Rebuild index immediately after construction.
		- Do not add records if they do not padd key filtration.
		- Do not attempt to remove records if the are not in the index.
	* Key.cs:
		- Added HasFilter property, CanContain and DependsOn methods.