@@ -740,8 +740,13 @@ namespace System.Data.Common {
 										col.AllowDBNull = false;
 								}
 							}
-
-							bool isHidden = (bool) schemaRow ["IsHidden"];
+						
+							bool isHidden = false;
+							if (schemaTable.Columns.Contains ("IsHidden")) {
+								value = schemaRow["IsHidden"];
+								isHidden = ((value is bool) ? (bool)value : false);
+							}
+							
 							if (isKey && !isHidden) {
 								primaryKey.Add (col);
 								if (allowDBNull)
