@@ -1,3 +1,8 @@
+2006-01-31  Senganal T  <tsenganal@novell.com>
+
+	* DbDataAdapter.cs :
+		- Corrected an error in the prev checkin.. Fixes #77415
+
 2006-01-27  Senganal T  <tsenganal@novell.com>
 
 	* DbDataAdapter.cs :
